# airbnb_price_prediction

./: main.py  pyproject.toml
.history/docs/: data_description_20260302224124.md  data_description_20260302224158.md
data/: df_reviews_cleaned.csv
data/all/: X_test_all.csv  ids_test_all.csv  ids_train_all.csv  y_test_all.csv  y_train_all.csv
data/brooklyn/: X_test_bkl.csv  X_train_bkl.csv  ids_test_bkl.csv  ids_train_bkl.csv  y_test_bkl.csv  y_train_bkl.csv
data/manhattan/: X_test_mnh.csv  X_train_mnh.csv  ids_test_mnh.csv  ids_train_mnh.csv  y_test_mnh.csv  y_train_mnh.csv
data/other/: X_test_other.csv  X_train_other.csv  ids_test_other.csv  ids_train_other.csv  y_test_other.csv  y_train_other.csv
docs/: data_description.md
docs/images/: airbnb_heatmap.html  price_elevation.html  property_type.html  property_type_with_price.html  room_type_with_price.html
notebooks/: 260302_khe_주요 변수와 가격과의 상관관계.ipynb  260304_khe.ipynb  2nd_data_preprocessing.ipynb  analyze.ipynb  cleaned_jph.ipynb  data_preprocessing.ipynb  devide_df.ipynb  df_reviews_cleaned.ipynb  khe.ipynb  lch.ipynb  lch_first_eda.ipynb  lch_ml.ipynb  modeling.ipynb  modeling_bkl.ipynb  modeling_manhattan.ipynb  modeling_neiborhood.ipynb  modeling_neighbourhood.ipynb  modeling_other.ipynb  modeling_others.ipynb  pjh.ipynb  pjh_eda.ipynb  pjh_review_eda.ipynb  review_preprocesing.ipynb  syb.ipynb  syb_price_reservation_eda.ipynb
results/: xgb_mht_model.json  xgb_model_bkl.json  xgb_model_brooklyn.json  xgb_model_mnh.json  xgb_model_other.json  xgb_other_model.json
src/: utils.py
